--- a/ejemplo.html
+++ b/ejemplo.html
@@ -9,16 +9,17 @@
 		</ul>
 		
 		<font size=7 color='blue' face='arial'> Otra linea de texto</font>
-		<img src = 'https://es.uadyvirtual.uady.mx/pluginfile.php/480073/user/icon/fordson/f1?rev=9617369' height='960' width='960'/> 
+		
 		<p> Link para ir a otra pagina</p>
 		<a href='https://es.uadyvirtual.uady.mx/user/profile.php?id=24661'> pagina UADY</a>
 
 		</br>
-		<table>
-			<tr>
-				<td>Matricula</td>
-				<td>Nombre</td>
-				<td>Apellido</td>
+		<table border = 3 cellspacing = 7 align = center>
+			<caption>Tabla nombres ramndom</caption>
+			<tr bgcolor="gray">
+				<th>Matricula</th>
+				<th>Nombre</th>
+				<th>Apellido</th>
 			</tr>
 			<tr>
 				<td>12345</td>
@@ -36,6 +37,20 @@
 				<td>Suárez</td>
 			</tr>
 		</table>
-		<h2> Tema 2: CSS<h2>
+		<h2> Formularios con HTML<h2>
+		
+		<form>
+			<p>Nombre <input type = "text"/></p>
+			<input type = "submit" id = enviar/>
+			
+		</form>
+		
+		<script>
+		 const input = Document.getElementById("enviar");
+		 
+		 input.onclick(console.log("Sexo"));
+		
+		</script>
+
 	</body>
 </html>
