--- a/practica2.html
+++ b/practica2.html
@@ -15,7 +15,7 @@
 
     <fieldset>
         <legend>Datos de entradas</legend>
-        <form>
+        <form align>
             <label for="usuario"> Usuario:        <input type="text" name ="usuario" id="usuario" ></label></br>
             <label for="password">Contraseña:     <input type="password" name="password" id="password"></label>
             
